--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,18 @@
     "builds": [
       {
         "src": "server.js",
-        "use": "@vercel/node"
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": ["db.json"]
+        }
       }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "server.js"
+      }
+      
     ],
     "rewrites": [
       {
